--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 authors = ["Forb.Jok <forbjok@gmail.com>"]
 
 [dependencies]
-gotham = { git = "https://github.com/gotham-rs/gotham.git" }
-gotham_derive = { git = "https://github.com/gotham-rs/gotham.git" }
+futures = "~0.1.17"
+futures-await = "~0.1.0"
+gotham = { path = "../gotham" }
+gotham_derive = { path = "../gotham/gotham_derive" }
 hyper = "~0.11.11"
-slog = "~2.1.1"
+serde = "~1.0.27"
+serde_derive = "~1.0.27"
+serde_json = "~1.0.9"
+log = "~0.4.1"
